--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "chaiwithcode",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js",
+    "dev":"node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +15,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
