--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write .",
-    "start": "nodemon src/app.js",
-    "dev": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mongoose": "^8.1.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "mongoose-aggregate-paginate-v2": "^1.0.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
